Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3564

Seg fault during redirect follow when cache is disabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • HTTP

    Description

      Seg fault during redirect follow when cache is disabled. See below for stack trace:

      /home/y/bin/traffic_server - STACK TRACE:  
      /lib64/libpthread.so.0(+0xf710)[0x2b8f72cf0710]
      /home/y/bin/traffic_server(_ZN6HttpSM26setup_cache_write_transferEP11HttpCacheSMP11VConnectionP8HTTPInfolPKc+0x5d)[0x5dc3b7]
      /home/y/bin/traffic_server(_ZN6HttpSM26perform_cache_write_actionEv+0x226)[0x5dafb0]
      /home/y/bin/traffic_server(_ZN6HttpSM17handle_api_returnEv+0x259)[0x5cda97]
      /home/y/bin/traffic_server(_ZN6HttpSM17state_api_calloutEiPv+0x81a)[0x5cd7d4]
      /home/y/bin/traffic_server(_ZN6HttpSM18state_api_callbackEiPv+0x174)[0x5ccf6a]
      /home/y/bin/traffic_server(TSHttpTxnReenable+0x170)[0x517136]
      /home/y/libexec64/trafficserver/cache_tombstone.so(+0x107b)[0x2b8f7f92f07b]
      /home/y/bin/traffic_server(_ZN15INKContInternal12handle_eventEiPv+0xaa)[0x50b998]
      /home/y/bin/traffic_server(_ZN12Continuation11handleEventEiPv+0x6c)[0x4f6fa8]
      /home/y/bin/traffic_server(_ZN7APIHook6invokeEiPv+0x4f)[0x50c1df]
      /home/y/bin/traffic_server(_ZN6HttpSM17state_api_calloutEiPv+0x583)[0x5cd53d]
      /home/y/bin/traffic_server(_ZN6HttpSM23do_api_callout_internalEv+0x19d)[0x5d91f1]
      /home/y/bin/traffic_server(_ZN6HttpSM14set_next_stateEv+0xcf8)[0x5e068c]
      /home/y/bin/traffic_server(_ZN6HttpSM32call_transact_and_set_next_stateEPFvPN12HttpTransact5StateEE+0x1ae)[0x5df98c]
      /home/y/bin/traffic_server(_ZN6HttpSM17handle_api_returnEv+0xfa)[0x5cd938]
      /home/y/bin/traffic_server(_ZN6HttpSM17state_api_calloutEiPv+0x81a)[0x5cd7d4]
      /home/y/bin/traffic_server(_ZN6HttpSM23do_api_callout_internalEv+0x19d)[0x5d91f1]
      /home/y/bin/traffic_server(_ZN6HttpSM14do_api_calloutEv+0x26)[0x5e5ef2]
      /home/y/bin/traffic_server(_ZN6HttpSM33state_read_server_response_headerEiPv+0x695)[0x5ce9f1]
      /home/y/bin/traffic_server(_ZN6HttpSM12main_handlerEiPv+0x1d4)[0x5d0d8e]
      /home/y/bin/traffic_server(_ZN12Continuation11handleEventEiPv+0x6c)[0x4f6fa8]
      /home/y/bin/traffic_server[0x7394d7]
      /home/y/bin/traffic_server(_ZN18UnixNetVConnection19readSignalAndUpdateEi+0x20)[0x73bdf4]
      /home/y/bin/traffic_server(_ZN17SSLNetVConnection11net_read_ioEP10NetHandlerP7EThread+0x41c)[0x725838]
      /home/y/bin/traffic_server(_ZN10NetHandler12mainNetEventEiP5Event+0x584)[0x733196]
      /home/y/bin/traffic_server(_ZN12Continuation11handleEventEiPv+0x6c)[0x4f6fa8]
      /home/y/bin/traffic_server(_ZN7EThread13process_eventEP5Eventi+0xc8)[0x75a24e]
      /home/y/bin/traffic_server(_ZN7EThread7executeEv+0x3dc)[0x75a758]
      /home/y/bin/traffic_server[0x7597cc]
      

      The issue is that, cache action is set to CACHE_DO_WRITE, during redirect follow, without checking if cache is enabled.

      Attachments

        Activity

          People

            sudheerv Sudheer Vinukonda
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: