[TS-3564]: Check if cache is enabled before setting DO_WRITE action            during 3xx redirect follow, to prevent seg fault